--- a/css/blog.css
+++ b/css/blog.css
@@ -24,7 +24,7 @@ a.top-link {
   margin-bottom: 20px;
 }
 a.top-link:hover {
-  color: #a300ff; 
+  color: #6389AA;
 }
 h1 {
   font-family: 'EB Garamond', serif;
@@ -68,7 +68,7 @@ a.blog-nav-item, ul, li, .searchText, .top{
   font-size: 16px;
   letter-spacing: 2px;
   list-style: none;
- } 
+ }
 
 a.blog-nav-item:hover {
   color: #4DBD33;
@@ -159,8 +159,6 @@ span.glyphicon.glyphicon-chevron-down {
   margin: 0;
 }
 #pagebreak {
-/*  height: 52vh;*/
-/*  background: url(../images/boat.jpg) no-repeat left bottom fixed;*/
   background-size: cover;
   margin-bottom: 0;
   border-radius: 0;
@@ -198,13 +196,16 @@ span.glyphicon.glyphicon-chevron-down {
 }
 
 
-img.profile, img.personal {
+img.profile, img.personal, img.profile-fix {
   width: 74px;
   height: 74px;
   border-radius: 50%;
   display: inline;
   float: left;
   margin-right: 20px;
+}
+img.profile-fix {
+  border-radius: 10px;
 }
 
 img.personal{
@@ -293,7 +294,7 @@ button.navbar-toggle {
 .navbar i {
   padding-top: 1px;
   padding-left: 1px;
-} 
+}
 #mainNav ul li.active a {
     border: 1px solid;
     border-color: #4DBD33;
@@ -396,7 +397,7 @@ button.navbar-toggle {
   color: #009933;
 }
 .purple {
-  color: #a300ff;
+  color: #6389AA;
 }
 
 /*
@@ -464,7 +465,7 @@ button.navbar-toggle {
   height: max-content;
 }
 #projects2 {
-  border-top: 9px solid #a300ff;
+  border-top: 9px solid #6389AA;
 }
 
 #home, #projects2, #projects {
@@ -497,7 +498,7 @@ button.navbar-toggle {
 }
 #informationAbout {
   background: url(../images/rsz_1rsz_forest.jpg) no-repeat center bottom fixed;
-  border-top: 9px solid #a300ff;
+  border-top: 9px solid #6389AA;
 }
 #home-spacer {
   height: 20vh;
@@ -526,43 +527,48 @@ button.navbar-toggle {
 #profile-pic {
   width: 80%;
   max-width: 180px;
-  border: 1px solid #4DBD33;
+  border: 1px solid #ffb84d;
   border-radius: none;
-  margin: 40px auto;
+  margin: 40px;
   float: left;
 }
 
-#about-well, #quote-well {
+#about-well, #about-side-well, #quote-well {
   width: 90%;
   text-align: center;
   margin: 0 auto;
   background-color: rgba(0, 0, 0, .7);
 }
+
+#about-side-well {
+  padding-right: 20px;
+}
+
 #quote-well {
   max-width: 600px;
 }
 
 h2.aboutHeading {
   padding: 40px 0;
-  margin: 0;
+  margin: 0 auto;
+  margin-right: 40px;
+  text-align: center;
 }
 .no-break {
   white-space: nowrap;
 }
 #aboutStory {
-  /*border: 9px solid #a300ff;*/
-  border: 1px solid #4DBD33;
+  background-color: rgba(0, 0, 0, .2);
+  border: 3px solid #6389AA;
   border-radius: 0;
   margin: 40px;
-  margin-top: 0;
+  margin-top: 40px;
   text-align: left;
   padding: 8px;
+  color: #fff;
+  font-size: 20px;
 }
 
-p.aboutPage {
-  font-size: 18px;
-  color: #000;
-}
 #overlay, #overlayContact {
   position: absolute;
   top: 20px;
@@ -590,7 +596,7 @@ p.aboutPage {
 }
 
 #TrickAdblock a {
-  padding: 10px 15px; 
+  padding: 10px 15px;
   margin-bottom: 30px;
 }
 
@@ -601,8 +607,7 @@ p.aboutPage {
   background-color: #333;
   color: #fff;
   padding: 20px 0px;
-  border-top: 9px solid #a300ff;
-
+  border-top: 9px solid #6389AA;
 }
 #servicesC {
   background-color: #333;
@@ -666,11 +671,12 @@ h4.servicesText {
   animation-fill-mode: forwards;
   animation-delay: 3s;
 }
-p.block {
+p.block, h1.block {
   visibility: hidden;
   animation: fadeIn 2s linear;
   animation-fill-mode: forwards;
-  animation-delay: 3s;
+  animation-delay: 2s;
+  color: white;
   max-width: 80%;
   margin: auto;
   padding: 20px 0;
@@ -721,11 +727,11 @@ p.block {
 #projectCarousel > div > a.left.carousel-control {
   max-width: 40px;
 }
-.glyphicon-chevron-left, 
+.glyphicon-chevron-left,
 .glyphicon-chevron-right {
   transform: scale(1.3, 1.3);
 }
-.glyphicon-chevron-left:hover, 
+.glyphicon-chevron-left:hover,
 .glyphicon-chevron-right:hover {
   color: #4DBD33;
   transform: scale(1.7, 1.7);
@@ -735,14 +741,14 @@ p.block {
  */
 #footer {
   background-color: #333;
-} 
+}
 #footerContainer {
   margin 0 auto;
   padding: 0;
   left: 0;
   right: 0;
   width: 100%;
-} 
+}
 #footerSearch {
   text-align: center;
   color: #fff;
@@ -786,14 +792,14 @@ h4.top {
 #copyright {
   color: white;
   font-size: 12px;
-} 
+}
 .center_div{
     margin: 0 auto;
     width:80%;
 }
 #emailForm {
   text-align: left;
-  margin: 0 auto; 
+  margin: 0 auto;
   width: 90%;
   max-width: 600px;
 }
@@ -833,14 +839,18 @@ h4.top {
   }
 
 }
-@media only screen and (max-width : 820px) {
+
+
+@media only screen and (max-width : 1015px) {
     #profile-pic {
       left: 0;
       right: 0;
       float: none;
+      margin: 40px auto;
     }
     h2.aboutHeading {
       padding-top: 0;
+      margin: 0 auto;
     }
 }
 @media (max-width: 500px) {
@@ -856,7 +866,12 @@ h4.top {
     font-weight: normal;
     z-index: -1;
   }
-} 
+  #services {
+/*    margin: 0 auto;*/
+    padding-right: 15px;
+    margin-left: -15px;
+  }
+}
 @media (max-width: 420px) {
   #copyright {
     margin-top: 50px;
@@ -897,12 +912,20 @@ h4.top {
   animation-delay: 1.5s;
   }
   #aboutStory {
-  border: 2px solid #a300ff;
-  border-radius: 0;
+  border: none;
+  font-size: 18px;
   margin: 10px;
   padding: 8px;
   }
+  #pagebreak {
+  background: url(../images/mountain_adventure_sm.jpg);
+  background-size: cover;
+  }
+  figure.hideFig, img.hideFig {
+    visibility: hidden;
+  }
+  #contact-li {
+    visibility: hidden;
+  }
+
 }
-
-
-
